<resources>
    <string name="app_name">Sage</string>
    <string name="Handful">Handful</string>
    <string name="sage">Sage</string>
    <string name="never_kill_your_plants_again">Never kill your plants again.</string>
    <string name="start">Start</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>